<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <Button
        android:id="@+id/showSimpleDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_simple_dialog" />

    <Button
        android:id="@+id/showButtonDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_button_dialog" />

    <Button
        android:id="@+id/showSingleChoiceDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_dialog_with_single_choice" />

    <Button
        android:id="@+id/showCustomLayoutDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_dialog_with_custom_layout" />

    <Button
        android:id="@+id/showDialogFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_dialog_fragment" />

    <Button
        android:id="@+id/showBottomSheetFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_bottomsheet_dialog_fragment" />

</LinearLayout>